# aw-watcher-netstatus

./: .gitignore  LICENSE  README.md  pyproject.toml
aw_watcher_netstatus/: __init__.py  config.py  settings.py  watcher.py
